--- a/index2.css
+++ b/index2.css
@@ -44,15 +44,15 @@ header::after{
 }
 header video{
     position: absolute;
-    width: 120%;
+    width: 130%;
     height: 190%;
-    top: -45%;
+    top: -50%;
     z-index: -1;
 }
 header nav{
     width: 100%;
     height: 10%;
-    border: 1px solid #fff;
+    /* border: 1px solid #fff; */
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -80,5 +80,122 @@ header nav .logo_ul ul li a{
     color: #fff;
     font-size: 18px;
     font-weight: bold;
+    transition: .3s linear;
+
 }
+header nav .logo_ul ul li a:hover{
+    color: rgb(255, 255, 255, .7);
+    
+}
+header nav .search_user{
+    position: relative;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+header nav .search_user input{
+    padding: 3px 10px;
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    background: rgb(255, 255, 255, .3);
+    color: #fff;
+    margin-right: 10px;
+
+}
+header nav .search_user input::placeholder{
+    color: #fff;
+
+}
+header nav .search_user img{
+    width: 23px;
+    height: 23px;
+    border-radius: 50%;
+
+}
+header nav .search_user .search{
+    position: absolute;
+    width: 320px;
+    height: 270px;
+    /* border: 1px solid #fff; */
+    right: 0;
+    top: 42px;
+    z-index: 99999;
+    overflow-y: auto;
+}
+header nav .search_user .search::-webkit-scrollbar{
+    width: 5px;
+    background: rgb(255, 255, 255, .3);
+    border-radius: 5px;
+    visibility: hidden;
+}
+header nav .search_user .search::-webkit-scrollbar-thumb{
+    width: 5px;
+    background: rgb(255, 255, 255, .4);
+    border-radius: 5px;
+    visibility: hidden;
+}
+header nav .search_user .search:hover:-webkit-scrollbar{
+    visibility: visible;
+}
+header nav .search_user .search:hover:-webkit-scrollbar-thumb{
+    visibility: visible;
+}
+header nav .search_user .search .card{
+    position: relative;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+    padding: 3px 0px;
+    text-decoration: none;
+    display: none;
+
+}
+header nav .search_user .search .card::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100% ;
+    background:rgb(255, 255, 255, .1);
+    backdrop-filter: blur(5px);
+    border-radius: 5px;
+    z-index: -1;
+ 
+}
+header nav .search_user .search .card img{
+  width: 28px;
+  height: 90%;
+  border-radius: 2px;
+  margin-left: 8px;
+ 
+}
+header nav .search_user .search .card .cont{
+   margin-left: 10px;
+   color: #fff;
+
+  }
+  header nav .search_user .search .card .cont h3{
+  font-size: 15px;
+  line-height: 25px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 250px;
+ 
+   }
+   header nav .search_user .search .card .cont p{
+    font-size: 10px;
+     color: rgb(255, 255, 255, .8);
+   
+     }
+     header nav .search_user .search .card .cont span{
+        background: yellow;
+        color: #000;
+        padding: 0px 3px;
+        margin: 0px 5px 0px 10px;
+        font-weight: 500;
+       
+         }
 
