--- a/index2.css
+++ b/index2.css
@@ -183,13 +183,12 @@ header nav .search_user .search .card .cont{
   text-overflow: ellipsis;
   white-space: nowrap;
   width: 250px;
- 
-   }
+  }
    header nav .search_user .search .card .cont p{
     font-size: 10px;
      color: rgb(255, 255, 255, .8);
    
-     }
+  }
      header nav .search_user .search .card .cont span{
         background: yellow;
         color: #000;
@@ -197,5 +196,94 @@ header nav .search_user .search .card .cont{
         margin: 0px 5px 0px 10px;
         font-weight: 500;
        
-         }
+  }
 
+header .content{
+        position: relative;
+        color: #fff;
+        margin-top: 50px;
+        padding-left: 50px;
+       
+  }
+  header .content h1{
+    font-size: 50px;
+
+   
+}
+  header .content p{
+    font-size: 11px;
+    width: 350px;
+    word-break: break-all;
+     
+}
+header .content .details{
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+}
+header .content .details h6{
+   color: rgb(255, 255, 255, .8);
+   font-size: 10px;
+   margin-right: 10px;
+}
+header .content .details h5{
+    color: rgb(142, 230, 48);
+    font-size: 10px;
+    margin-right: 10px;
+ }
+ header .content .details h4{
+    color:#fff;
+    font-size: 10px;
+    margin-right: 10px;
+ }
+ header .content .details h3{
+    color:#fff;
+   display: flex;
+   align-items: center;
+   font-size: 10px;
+ }
+header .content .details h3 span{
+    background: yellow;
+    color: #000;
+    padding: 0px 3px;
+    margin: 0px 5px 0px 5px;
+    font-weight: 500;
+}
+header .content .details h3 i{
+    margin-right: 5px;
+
+}
+header .content .btns{
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+
+}
+header .content .btns a {
+  padding: 8px 12px;
+  font-size: 15px;
+  font-weight: 600;
+  background: linear-gradient(90deg, #00bdff, #0079ff);
+  border-radius: 7px;
+  color: #fff;
+  margin-left: 10px;
+  text-decoration: none;
+}
+@keyframes button{
+    0%{ background: linear-gradient(0deg, #00bdff, #0079ff);
+    }
+    12%{ background: linear-gradient(45deg, #00bdff, #0079ff);
+    }
+    24%{ background: linear-gradient(95deg, #00bdff, #0079ff);
+    }
+    36%{ background: linear-gradient(145deg, #00bdff, #0079ff);
+    }
+    48%{ background: linear-gradient(195deg, #00bdff, #0079ff);
+    }
+    60%{ background: linear-gradient(245deg, #00bdff, #0079ff);
+    }
+    72%{ background: linear-gradient(295deg, #00bdff, #0079ff);
+    }
+    100%{ background: linear-gradient(360deg, #00bdff, #0079ff);
+    }
+}
