--- a/index2.css
+++ b/index2.css
@@ -302,11 +302,12 @@ header section .cards{
     position: relative;
     width: 100%;
     height: 200px;
-    border: 1px solid white;
+    /* border: 1px solid white; */
     margin-top: 10px;
     display: flex;
     align-items: center;
     overflow-x: auto;
+    scroll-behavior: smooth;
     
 }
 
@@ -317,7 +318,7 @@ header section .cards .card{
     position: relative;
     min-width: 130px;   
     height: 180px;
-    border: 1px solid #fff;
+    /* border: 1px solid #fff; */
     border-radius: 8px;
     margin-right: 10px;
     background: #000;
@@ -329,8 +330,8 @@ header section .cards .card .poster{
    border-radius: 8px;
    position: relative;
 }
-header section .cards .card {
-  width: 300px;
+header section .cards .card:hover {
+  min-width: 300px;
   overflow: hidden;
  }
  header section .cards .card .rest_card {
@@ -342,7 +343,7 @@ header section .cards .card {
     left: 0;
     top: 0;
     z-index: 999999;
-    opacity: 1;
+    opacity: 0;
     transition: 1s linear;
    }
    header section .cards .card .rest_card img {
@@ -388,3 +389,47 @@ header section .cards .card .rest_card .cont .sub{
    display: flex;
    align-items: center;
   }
+  header section .cards .card .rest_card .cont .sub span{
+  background-color: yellow;
+  color: #000;
+  padding: 0px 3px;
+  margin: 0px 5px 0px 10px;
+  font-weight: 500;
+  border-radius: 2px;
+
+   }
+   header section .cards .card .rest_card .cont .sub i{
+  margin-right: 3px;
+    
+     }
+     header section .cards .card.card:hover .rest_card{
+      opacity: 1;
+          
+           } 
+header section .bi-chevron-left, .bi-chevron-right{
+position: absolute;
+top: 50%;
+left: 3%;
+width: 25px;
+height: 25px;
+background: rgb(255, 255, 255, .3);
+color: #fff;
+display: flex;
+align-items: center;
+justify-content: center;
+border-radius: 50%;
+font-size: 12px;
+cursor: pointer;
+transition: .3s linear;
+z-index: 999999999;
+}  
+header section .bi-chevron-right{
+   left: unset;
+   right: 3%;
+    }  
+    header section:hover .bi-chevron-right{
+     opacity: 2;
+    }
+    header section:hover .bi-chevron-left{
+       opacity: 2;
+         }        
